test/sema/exercise/struct_in_binop.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
}

fn main(): unit {
  let s = S { x: 1 };

  s + 0;
  // CHECK: [[# @LINE - 1 ]]:5: error: incompatible operands to binary operator ('S' and 'number')

  0 + s;
  // CHECK: [[# @LINE - 1 ]]:5: error: incompatible operands to binary operator ('number' and 'S')
}
